--- a/kontakt.html
+++ b/kontakt.html
@@ -22,7 +22,7 @@
                     <input type="email" name="Email:" placeholder="Unesite Vašu email adresu" id="inputEmail">
                     <input type="number" name="Telefon:" placeholder="Unesite Vaš broj telefona" id="inputNumber" >
                     <!-- izmedju ova dva komentara je nesto od formspree -->
-                    <input type="hidden" name="_next" value="index.html" />
+                    <input type="hidden" name="_next" value="Masaze" />
                     <input type="text" name="_gotcha" style="display:none" />
                     <!-- i nece biti prikazano -->
                     <textarea name="Poruka:"  cols="30" rows="7" placeholder="Unesite Vasu poruku..." id="inputMessage"></textarea>
